apps/base/weave-ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: weave-ingress
  namespace: flux-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`weave.local.reinthal.cc`)
      kind: Rule
      middlewares:
        -   name: default-headers
            namespace: flux-system
      services:
        - name: weave-gitops
          port: 9001
  tls:
    secretName: local-reinthal-cc-tls
